<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zsf.test.branch.kotlin.KotlinActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_120_dp"
        android:layout_margin="@dimen/dimen_20_dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/m_test_textView_kotlin_result"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m_test_textView_kotlin_result">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_20_dp"
            android:paddingBottom="@dimen/dimen_60_dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_label"
                android:text="@string/m_test_kotlin_button_label"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_sum_two"
                android:text="@string/m_test_kotlin_button_sum_two"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_sum_more"
                android:text="@string/m_test_kotlin_button_sum_more"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_constructor"
                android:text="@string/m_test_kotlin_button_constructor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_abstract"
                android:text="@string/m_test_kotlin_button_abstract"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_nest_class"
                android:text="@string/m_test_kotlin_button_nest_class"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_inner"
                android:text="@string/m_test_kotlin_button_inner_class"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_NoNameInner_class"
                android:text="@string/m_test_kotlin_button_NoNameInner_class"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_setter"
                android:text="@string/m_test_kotlin_button_setter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_extend"
                android:text="@string/m_test_kotlin_button_extend"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_decorate"
                android:text="@string/m_test_kotlin_button_decorate"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/m_test_kotlin_button_data"
                android:text="@string/m_test_kotlin_button_data"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
